  moved when dragged.

Note that, to accomodate this option in the "Window Handling Preferences" tab in
WPrefs.app, the option to "Open dialogs in the same workspace as their owners"
(which sets the "OpenTransientOnOwnerWorkspace" option from
~/GNUstep/Defaults/WindowMaker) has been moved to "Expert User Preferences".

--- 0.95.6

More image format supported
---------------------------

In addition to a more complete Netpbm image formats support, WindowMaker
can now load WebP images. It can also make use of the ImageMagick library
to support a lot more formats, like SVG, BMP, TGA...


Mini-window apercu
------------------

A small preview of window contents can be enabled from WPrefs,
in Miscellaneous Ergonomic Preferences, check miniwindow apercus.
Apercu size can be configured using the ApercuSize variable with

$ wdwrite WindowMaker ApercuSize 4

in multiples of the icon size (in this case the apercu size will be four
times the icon size).

The default size remains 2 (twice the icon size).


Support for up to 9-buttons mouse
----------------------------------

The new buttons action can be configured from WPrefs directly.


wmiv, an image viewer application
-----------------------------------

wmiv is a fast image loader using wrlib, you can run it from the
command line.


--- 0.95.5

Support for generated menus in proplist format
----------------------------------------------

The root menu now supports a OPEN_PLMENU option to construct a submenu from
the output of a command which is proplist format. This can be used e.g. in
conjunction with wmmenugen like:

(
    "Generated PL Submenu", OPEN_PLMENU,
    "|| find /usr/share/applications -type f -name '*desktop' | xargs wmmenugen -parser:xdg"
)


New window placements
---------------------

Now it is possible to maximize windows to the top/bottom halves
of the screen and also to the corners (top/bottom + left/right).

The keyboard shortcuts can be configured with WPrefs.

